Reorganize and use cmake variables to set model and actions files per project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,17 @@ include_directories(extern/immer extern/lager extern/cereal/include extern/zug)
 
 find_package(Qt5 COMPONENTS Core Quick Qml Concurrent Gui Widgets QuickControls2 REQUIRED)
 
+
+add_subdirectory(Examples/Snake)
+message("MODEL_HEADER: ${MODEL_HEADER}")
+message("ACTIONS_HEADER: ${ACTIONS_HEADER}")
+
+
 set(SOURCES
     Sources/main.cpp
     Sources/Core.cpp)
 
 set(HEADERS
-    Sources/Model.h
-    Sources/Actions.h
     Sources/Core.h
     Interfaces/IReducer.h
     Interfaces/IView.h)
@@ -28,10 +32,8 @@ set(OTHER
 
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} ${OTHER})
+
+add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} ${ACTIONS} ${MODEL} ${OTHER})
+add_compile_definitions(ACTIONS_HEADER=${ACTIONS_HEADER} MODEL_HEADER=${MODEL_HEADER})
 target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Qml Qt5::QuickControls2 -lstdc++)
-
-
-add_subdirectory(Examples/View)
-add_subdirectory(Examples/Reducer)
